force-app/main/default/objects/ContentVersion/fields/Draft_Document_Names__c.field-meta.xml
<CustomField>
    <fullName>Draft_Document_Names__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/ContentVersion/&quot; &amp; Id &amp; &quot;/view?forceDirectDownload=1&quot;, Title )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Draft Document Names</label>
    <type>Text</type>
</CustomField>