force-app/main/default/objects/ContentVersion/fields/File_Extension_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Extension_Type__c</fullName>
    <label>File Extension</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pdf</fullName>
            </value>
            <value>
                <fullName>docx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>