force-app/main/default/objects/ContentVersion/fields/FIle_Image__c.field-meta.xml
<CustomField>
    <fullName>FIle_Image__c</fullName>
    <formula>CASE(
  File_Extension_Type__c,
  &quot;docx&quot;, IMAGE(&quot;https://upload.wikimedia.org/wikipedia/commons/f/fb/.docx_icon.svg&quot;, &quot;docx&quot;, 34, 34),
  &quot;pdf&quot;, IMAGE(&quot;https://upload.wikimedia.org/wikipedia/commons/3/38/Icon_pdf_file.svg&quot;, &quot;pdf&quot;, 34, 34),
  IMAGE(&quot;https://example.com/default_image.png&quot;, &quot;default&quot;, 24, 32)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FIle Image</label>
    <type>Text</type>
</CustomField>