force-app/main/default/objects/ContentVersion/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <label>File Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Property Valuation</fullName>
            </value>
            <value>
                <fullName>Letting</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Client Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>