force-app/main/default/objects/ContentVersion/fields/pba__ExternalLink__c.field-meta.xml
<CustomField>
    <fullName>pba__ExternalLink__c</fullName>
    <label>External Link</label>
    <type>Url</type>
</CustomField>