force-app/main/default/objects/ContentVersion/fields/pba__Identifier__c.field-meta.xml
<CustomField>
    <fullName>pba__Identifier__c</fullName>
    <label>Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>